# SGTradeClassificationRagBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  setup.cfg
src/: config.py  main.py
src/agents/: naive_agent.py
src/parser/: ingestion.py
src/sg_trade_ragbot/agents/: naive_agent.py
src/sg_trade_ragbot/parser/: ingestion.py
src/sg_trade_ragbot/tools/: RAGTool.py
src/sg_trade_ragbot/utils/evals/: evaluator.py  provider.py
src/sg_trade_ragbot/utils/evals/eval_configs/: bare_config.yaml
src/sg_trade_ragbot/utils/models/: models.py
src/sg_trade_ragbot/utils/prompts/: prompts.py
src/sg_trade_ragbot/utils/pydantic_models/: models.py
src/tools/: RAGTool.py
src/utils/models/: models.py
src/utils/prompts/: prompts.py
tests/agents/: test_naive_agent.py
tests/parser/: test_ingestion.py
tests/tools/: test_RAGTool.py
tests/utils/evaluator/: test_evaluator.py
tests/utils/models/: test_models.py
