[project]
name = "sg_trade_ragbot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets>=4.5.0",
    "groq>=0.37.1",
    "instructor>=1.14.5",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.12",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "llama-index>=0.14.14",
    "llama-index-core>=0.14.14",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-groq>=0.4.1",
    "llama-index-llms-ollama>=0.9.1",
    "llama-index-llms-openai>=0.6.18",
    "llama-index-readers-file>=0.5.6",
    "llama-index-readers-llama-parse>=0.5.1",
    "llama-parse>=0.6.54",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "openai>=2.21.0",
    "pandas>=2.3.3",
    "promptfoo>=0.1.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.27.1",
    "pymupdf4llm>=0.3.4",
    "python-dotenv>=1.2.1",
    "ragas>=0.4.3",
    "scikit-network>=0.33.5",
    "sqlalchemy>=2.0.46",
    "transformers>=4.57.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
